src/ui/snapshots/kvn_tui__ui__layout__tests__draw_dns_settings_overlay_fakeip_on_snapshot.snap
---
source: src/ui/layout.rs
expression: "snapshot_terminal(&model, 80, 24)"
---
┌ Traffic ─────────────────────────────────────────────────────────────────────┐
│ ↑ 0.0 KB/s  ↓ 0.0 KB/s    Total: ↑ 0.0 KB  ↓ 0.0 KB    0 connections         │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Profiles ────────────────────────────────────────────────────────────────────┐
│ No sources. Press p to paste a profile or subscription URL from clipboard.   │
│                                                                              │
│                                                                              │
│                      ┌───────────────────────────────┐                       │
│                      │        Settings › DNS         │                       │
│                      │                               │                       │
│                      │ Preset   ‹ System local › *   │                       │
│                      │ Strategy ‹ Prefer IPv4 ›      │                       │
│                      │ Fake-IP  ‹ on ›               │                       │
│                      │                               │                       │
│                      │      󰌑 apply · q/󱊷 close      │                       │
│                      └───────────────────────────────┘                       │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 DISCONNECTED                                                     fakeip  Global
