src/ui/snapshots/kvn_tui__ui__layout__tests__draw_dns_settings_overlay_snapshot.snap
---
source: src/ui/layout.rs
expression: "snapshot_terminal(&model, 80, 24)"
---
┌ Traffic ─────────────────────────────────────────────────────────────────────┐
│ ↑ 0.0 KB/s  ↓ 0.0 KB/s    Total: ↑ 0.0 KB  ↓ 0.0 KB    0 connections         │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Profiles ────────────────────────────────────────────────────────────────────┐
│ No sources. Press p to paste a profile or subscription URL from clipboard.   │
│                                                                              │
│               ┌──────────────────────────────────────────────┐               │
│               │                 DNS settings                 │               │
│               │                                              │               │
│               │   Preset   ‹ Cloudflare DoH (1.1.1.1) ›      │               │
│               │   Strategy ‹       prefer_ipv4        ›      │               │
│               │   Fake-IP  ‹           off            ›      │               │
│               │                                              │               │
│               │         󰌑 apply · q/󱊷 close · ⌫ back         │               │
│               │                                              │               │
│               │                                              │               │
│               │                                              │               │
│               └──────────────────────────────────────────────┘               │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 DISCONNECTED                                                        DoH  Global
