src/ui/snapshots/kvn_tui__ui__layout__tests__draw_geo_region_overlay_at_minimum_terminal_size_snapshot.snap
---
source: src/ui/layout.rs
expression: "snapshot_terminal(&model, MIN_TERMINAL_WIDTH, MIN_TERMINAL_HEIGHT)"
---
┌ Traffic ───────────────────────────────────────────────────────────┐
│ ↑ 0.0 KB/s  ↓ 0.0 KB/s    Total: ↑ 0.0 KB  ↓ 0.0 KB    0 connectio │
└─────────────────┌───────────────────────────────┐──────────────────┘
┌ Profiles ───────│  Settings › Routing › Region  │──────────────────┐
│ No sources. Pres│                               │ption URL from    │
│clipboard.       │           🇷🇺  Russia           │                  │
│                 │           🇨🇳  China            │                  │
│                 │           🇮🇷  Iran             │                  │
│                 │           🌍  Global           │                  │
│                 │                               │                  │
│                 │            󰌑 apply            │                  │
│                 └───────────────────────────────┘                  │
│                                                                    │
└────────────────────────────────────────────────────────────────────┘
 DISCONNECTED                                              DoH  Global
[70x15]
