src/ui/snapshots/kvn_tui__ui__layout__tests__draw_help_overlay_at_minimum_terminal_size_snapshot.snap
---
source: src/ui/layout.rs
expression: "snapshot_terminal(&model, MIN_TERMINAL_WIDTH, MIN_TERMINAL_HEIGHT)"
---
┌ Traffic ───────────────────────────────────────────────────────────┐
│ ↑ 0.0 K┌─────────────────────────────────────────────────┐onnectio │
└────────│ Navigation                                      │─────────┘
┌ Profile│ Ctrl+h/l   Focus panes                          │─────────┐
│ No sour│ j/k, ↑/↓   Move or scroll                       │ from    │
│clipboar│ gg/G       Go to first / last                   │         │
│        │                                                 │         │
│        │ Profiles                                        │         │
│        │ Enter      Connect selected profile             │         │
│        │ e          Open profiles.json in $EDITOR        │         │
│        │ y          Yank profile or subscription         │         │
│        │                                                 │         │
│        │                    q/󱊷 close                    │         │
└────────└─────────────────────────────────────────────────┘─────────┘
 DISCONNECTED                                              DoH  Global
