src/ui/snapshots/kvn_tui__ui__layout__tests__draw_help_overlay_snapshot.snap
---
source: src/ui/layout.rs
expression: "snapshot_terminal(&model, APP_WINDOW_COLS, APP_WINDOW_ROWS)"
---
┌ Traffic ──────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ ↑ 0.0 KB/s  ↓ 0.0 KB/s    Total: ↑ 0.0 KB  ↓ 0.0 KB    0 connections                                          │
└──────────────────────────────┌─────────────────────────────────────────────────┐──────────────────────────────┘
┌ Profiles ────────────────────│ Navigation                                      │──────────────────────────────┐
│ No sources. Press p to paste │ Ctrl+h/l   Focus panes                          │                              │
│URL from clipboard.           │ j/k, ↑/↓   Move or scroll                       │                              │
│                              │ gg/G       Go to first / last                   │                              │
│                              │                                                 │                              │
│                              │ Profiles                                        │                              │
│                              │ Enter      Connect selected profile             │                              │
│                              │ e          Open profiles.json in $EDITOR        │                              │
│                              │ y          Yank profile or subscription         │                              │
│                              │ p          Paste profile or subscription        │                              │
│                              │ d          Delete profile or subscription       │                              │
│                              │ u          Update subscription or geo           │                              │
│                              │ i/I        Cycle subscription / geo auto-update │                              │
│                              │ t/T        Test selected / all profiles         │                              │
│                              │                                                 │                              │
│                              │ Logs                                            │                              │
│                              │ y          Yank selected log(s)                 │                              │
│                              │ Shift+V    Select multiple logs                 │                              │
│                              │ Esc        Cancel log selection                 │                              │
│                              │                                                 │                              │
│                              │ Connection                                      │                              │
│                              │ r          Reconnect                            │                              │
│                              │ s          Disconnect                           │                              │
│                              │ a          Toggle auto-connect                  │                              │
│                              │ Shift+K    Toggle kill switch                   │                              │
│                              │                                                 │                              │
│                              │ Settings                                        │                              │
│                              │                                                 │                              │
│                              │                    q/󱊷 close                    │                              │
│                              └─────────────────────────────────────────────────┘                              │
└───────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────┘
 DISCONNECTED                                                                                         DoH  Global
