src/ui/snapshots/kvn_tui__ui__layout__tests__draw_logs_help_overlay_snapshot.snap
---
source: src/ui/layout.rs
expression: "snapshot_terminal(&model, 100, 24)"
---
┌ Traffic ─────────────────────────────────────────────────────────────────────────────────────────┐
│ ↑ 0.0 KB/s  ↓┌────────────────────────────────────────────────────────────────────┐              │
└──────────────│ gg/G            Go to first / last                                 │──────────────┘
┌ Profiles ────│                                                                    │──────────────┐
│ No sources. P│ Logs                                                               │              │
│subscription U│ y               Yank selected log(s)                               │              │
│              │ Shift+V         Select multiple logs                               │              │
│              │ Esc             Cancel log selection                               │              │
│              │                                                                    │              │
│              │ Profiles                                                           │              │
│              │ Enter           Connect selected profile                           │              │
│              │ e               Open profiles.json in $EDITOR                      │              │
│              │ y               Yank profile or subscription                       │              │
│              │ p               Paste profile or subscription                      │              │
│              │ d               Delete profile or subscription                     │              │
│              │ u               Update subscription or geo                         │              │
│              │ i/I             Cycle subscription / geo auto-update               │              │
│              │ t/T             Test selected / all profiles                       │              │
│              │                                                                    │              │
│              │ Connection                                                         │              │
│              │                                                                    │              │
│              │                              q/󱊷 close                             │              │
└──────────────└────────────────────────────────────────────────────────────────────┘──────────────┘
 DISCONNECTED                                                                            DoH  Global
